--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <button id="test">TEST</button>
 
-<script>
-    
-</script>
+    <div id="dane">DANE</div>
+    <script src="main.js"></script>
 </body>
 </html>
