--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,15 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>Website</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <button id="test">TEST</button>
-
-    <div id="dane">DANE</div>
-    <script src="main.js"></script>
+    <div class="container-fluid">
+        <div class="row upper-row">
+            <h1>JBZDY2</h1>
+        </div>
+        <div class="row mid-row">
+            <div class="col-3 left-col">
+            </div>
+            <div class="col-6 main-col">
+                <button id="test">TEST</button>
+                <div class="col img">
+                    <div class="row img-title">
+                        <h1>Reimu na rzułfiu ałuuuu</h1>
+                    </div>
+                    <div class="row img-main">
+                        <img src="rakreimu.jpg" class="img-fluid"></img>
+                    </div>
+                    <div class="btn-group img-buttons" role="group">
+                        <button type="button" class="btn btn-success"><h1>+</h1></button>
+                        <button type="button" class="btn btn-danger"><h1> - </h1></button>
+                        <button type="button" class="btn btn-light"><h1>Comments</h1></button>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="col-3 right-col">
+                <div id="dane">DANE</div>
+                <script src="main.js"></script>
+            </div>
+        </div>
+        <div class="row foot-row">
+            <h1>Mejd by: the paushteins</h1>
+        </div>
+    </div>
 </body>
 </html>
